# Ithmb-Codec

./: .editorconfig  .gitattributes  .gitignore  ACKNOWLEDGMENTS.md  AGENTS.md  ARCHITECTURE.md  BENCHMARKS.md  CHANGELOG.md  CONTRIBUTING.md  CREDITS.md  Cargo.toml  HARDWARE_GUIDE.md  PRODUCTION_GRADE_RUBRIC.md  PROFILES.md  README.md  ROADMAP.md  RUST_STANDARDS.md  SECURITY.md  STANDARDS.md  STATS.md  _typos.toml  deny.toml  rust-toolchain.toml  rustfmt.toml
.githooks/: pre-commit
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  baseline.json  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  quarterly-audit.md
.github/workflows/: build-linux.yml  build-macos.yml  dependabot-auto-merge-checks.yml  dependabot-auto-merge.yml  fuzz-weekly.yml  miri.yml  publish.yml  python-publish.yml  release.yml  rust-ci.yml  test-arm.yml  test-neon.yml
.opencode/: lsp.json  mcp.json
crates/cabi/: Cargo.toml  igplugin.json
crates/cabi/src/: lib.rs  logging.rs  types.rs
crates/ithmb-cli/: Cargo.toml  README.md
crates/ithmb-cli/src/: main.rs
crates/ithmb-cli/tests/: cli.rs
crates/ithmb-core/: Cargo.toml  README.md
crates/ithmb-core/benches/: decoders.rs  memory.rs  pipeline.rs  profiles.rs  simd_compare.rs
crates/ithmb-core/benches/util/: mod.rs
crates/ithmb-core/data/: profiles.json
crates/ithmb-core/include/: ithmb.h
crates/ithmb-core/src/: c_api.rs  cache.rs  cl.rs  clcl.rs  config.rs  decoder_helpers.rs  error.rs  jpeg.rs  lib.rs  metrics.rs  pixel_utils.rs  profile.rs  reordered_rgb555.rs  rgb555.rs  rgb565.rs  uyvy.rs  ycbcr420.rs
crates/ithmb-core/src/enc/: cl.rs  clcl.rs  helpers.rs  mod.rs  reordered.rs  rgb555.rs  rgb565.rs  uyvy.rs  ycbcr420.rs
crates/ithmb-core/src/photodb/: builder.rs  mod.rs  parser.rs  types.rs
crates/ithmb-core/src/pipeline/: mod.rs  open.rs  profile_loader.rs
crates/ithmb-core/src/simd/: cl.rs  clcl.rs  enc.rs  mod.rs  neon.rs  reordered.rs  rgb555.rs  rgb565.rs  scalar.rs  uyvy.rs  yuv.rs
crates/ithmb-core/tests/: c_api_test.rs  cache_concurrency.rs  cancellation.rs  concurrency.rs  edge_cases.rs  golden_comparison.rs  photodb_roundtrip.rs  profile_validation.rs  properties.proptest-regressions  properties.rs  roundtrip.rs  simd_constants.rs  simd_tail.rs  statistical.rs  synthetic_vectors.rs
crates/ithmb-core/tests/c_api_test/: test_ithmb.c
crates/ithmb-core/tests/fixtures/: cl_solid_white_4x4.enc  jpeg_solid_white_2x2.enc  reordered_rgb555_gradient_4x4.enc  rgb565_gradient_4x4.enc  rgb565_solid_red_2x2.enc  ycbcr420_solid_white_4x4.enc
crates/ithmb-core/tests/util/: mod.rs  rng.rs
crates/ithmb-gen/: Cargo.toml
crates/ithmb-gen/src/: main.rs
crates/ithmb-wasm/: Cargo.toml
crates/ithmb-wasm/src/: lib.rs
docs/: ACKNOWLEDGMENTS.md  ECOSYSTEM.md  EVOLUTION.md  FORMAT.md  GLOSSARY.md  GUIDE.md  PROFILES.md  README.md  RETROSPECTIVE_SPEC.md  SETUP.md  STATS.md  benchmarks.html  what-is-this.md
docs/adr/: 0001-cross-platform-simd-dispatch.md  0002-cabi-plugin-split.md  0003-profile-discovery-and-resolution.md  0003-profile-resolution-and-discovery.md  0004-quarterly-audit-protocol.md  0005-file-size-guard-limit.md
docs/adr/csharp/: 0001-use-native-aot-plugin-boundary.md  0002-simd-dispatch-strategy.md
docs/benchmarks/: BENCHMARKS.md
docs/demo/: index.html
docs/guides/: GUIDE.md
docs/standards/: PRODUCTION_GRADE_RUBRIC.md  RUST_STANDARDS.md  STANDARDS.md
docs/synthesis/: v1.6.0.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_cabi_decode.rs  fuzz_decode_ithmb.rs  fuzz_encode_roundtrip.rs  fuzz_open_ithmb.rs
ithmb-cli/: Cargo.toml
ithmb-cli/src/: main.rs
ithmb-core/: Cargo.toml
ithmb-core/benches/: decoders.rs  encoders.rs  pipeline.rs  simd_compare.rs
ithmb-core/benches/util/: mod.rs
ithmb-core/src/: cache.rs  cl.rs  clcl.rs  device_profiles.rs  enc_helpers.rs  error.rs  jpeg.rs  lib.rs  metrics.rs  pipeline.rs  pixel_utils.rs  profile.rs  profile_db.rs  profile_parser.rs  reordered_rgb555.rs  rgb555.rs  rgb565.rs  uyvy.rs  ycbcr420.rs  yuv.rs
ithmb-core/src/enc/: cl.rs  mod.rs  ycbcr420.rs
ithmb-core/src/photodb/: builder.rs  parser.rs  types.rs
ithmb-core/src/pipeline/: open.rs
ithmb-core/src/simd/: cl.rs  clcl.rs  mod.rs  neon.rs  scalar.rs  yuv.rs
ithmb-core/tests/: edge_cases.rs  golden_comparison.rs  statistical.rs  synthetic_vectors.rs
ithmb-core/tests/fixtures/: reordered_rgb555_solid_white_2x2.enc  uyvy_interlaced_4x4.enc  uyvy_solid_white_2x2.enc  ycbcr420_gradient_4x4.enc
ithmb-core/tests/util/: mod.rs  rng.rs
pymod/: Cargo.toml  README.md  pyproject.toml
pymod/src/: lib.rs
pymod/tests/: test_basic.py
scripts/: bench-prep.sh  check-baseline.py  check-file-sizes.sh  check-zero-warnings.py  run-bench-perf.sh  verify-all.sh
src/IthmbCodec/: IthmbCodec.csproj  IthmbCodecPlugin.DecodePipeline.cs  IthmbCodecPlugin.Decoding.cs  IthmbCodecPlugin.DeviceProfiles.cs  IthmbCodecPlugin.Encoding.cs  IthmbCodecPlugin.JpegDecode.cs  IthmbCodecPlugin.PhotoDb.cs  IthmbCodecPlugin.ProfileSystem.cs  IthmbCodecPlugin.ProfilesJson.cs  IthmbCodecPlugin.Rgb565Rgb555.cs  IthmbCodecPlugin.UyvyYuv.cs  IthmbCodecPlugin.VariantProfile.cs  IthmbCodecPlugin.cs
src/IthmbCodec/PhotoDb/: Core.cs  Serialization.cs
src/IthmbCodec/test/: IthmbCodec.Tests.csproj  IthmbCodecTests.Cancellation.cs  IthmbCodecTests.Concurrency.cs  IthmbCodecTests.DeviceProfiles.cs  IthmbCodecTests.Fuzz.cs  IthmbCodecTests.PhotoDb.cs  IthmbCodecTests.Roundtrip.cs  IthmbCodecTests.cs  packages.lock.json
tests/golden/rgb555/: gradient_4x4.enc
tools/: check-benchmark-regression.sh
tools/IthmbDecoder/: Program.cs
tools/analysis/: perf-stats.py
