[package]
name = "ithmb-core-fuzz"
version = "0.0.0"
publish = false

edition = "2024"
license = "MIT"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.ithmb-core]
path = "../crates/ithmb-core"

[[bin]]
name = "fuzz_decode_ithmb"
path = "fuzz_targets/fuzz_decode_ithmb.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_open_ithmb"
path = "fuzz_targets/fuzz_open_ithmb.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_encode_roundtrip"
path = "fuzz_targets/fuzz_encode_roundtrip.rs"
test = false
doc = false
bench = false
