[package]
name = "ithmb-python"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Python bindings for Ithmb-Codec — decode Apple .ithmb thumbnail files"
repository = "https://github.com/B67687/Ithmb-Codec"
homepage = "https://github.com/B67687/Ithmb-Codec"
documentation = "https://docs.rs/ithmb-python"

[lib]
crate-type = ["cdylib"]

[dependencies]
ithmb-core = { path = "../crates/ithmb-core", version = "1.9" }
pyo3 = { version = "0.29", features = ["extension-module", "abi3", "abi3-py312", "auto-initialize"] }

[features]
default = []

[lints]
workspace = true
