[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "ithmb-core"
version = "1.9.1"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Rust",
    "Topic :: Multimedia :: Graphics",
]
description = "Python bindings for Ithmb-Codec — decode Apple .ithmb thumbnail files"
license = "MIT"
authors = [{ name = "B67687" }]
readme = "README.md"

[tool.maturin]
module-name = "ithmb_core"
abi3 = true
abi3-py312 = true
