[package]
name = "ithmb-core-cabi"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "C ABI plugin for ImageGlass to decode .ithmb files using ithmb-core"
repository = "https://github.com/B67687/Ithmb-Codec"
homepage = "https://github.com/B67687/Ithmb-Codec"
documentation = "https://docs.rs/ithmb-core-cabi"
keywords = ["ithmb", "thumbnail", "apple", "imageglass", "image"]
categories = ["multimedia::images", "multimedia::video"]

[lib]
crate-type = ["cdylib"]

[dependencies]
ithmb-core = { path = "../../crates/ithmb-core", version = "1.9" }
libc = "0.2"

[lints.rust]
unsafe_code = "allow"
unused_crate_dependencies = "deny"
rust_2018_idioms = "deny"

[lints.clippy]
all = "deny"
pedantic = "deny"
