[package]
name = "ithmb-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI tool for inspecting, decoding, and re-encoding .ithmb thumbnail cache files"
repository = "https://github.com/B67687/Ithmb-Codec"
homepage = "https://github.com/B67687/Ithmb-Codec"
documentation = "https://docs.rs/ithmb-cli"
keywords = ["ithmb", "thumbnail", "apple", "imageglass", "image"]
categories = ["multimedia::images", "multimedia::video"]

[lints]
workspace = true

[[bin]]
name = "ithmb"
path = "src/main.rs"

[features]
default = ["png-output"]
simd = ["ithmb-core/simd"]
png-output = ["dep:png"]

[dependencies]
ithmb-core = { path = "../../crates/ithmb-core", version = "1.9" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
png = { version = "0.18", optional = true }
