[package]
name = "ithmb-gen"
version.workspace = true
edition.workspace = true
description = "CLI tool to generate sample .ithmb thumbnail cache files"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

[lints]
workspace = true

[dependencies]
ithmb-core = { path = "../../crates/ithmb-core", version = "1.9" }
clap = { version = "4", features = ["derive"] }

[[bin]]
name = "ithmb-gen"
path = "src/main.rs"
