[package]
name = "ithmb-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "WASM bindings for ithmb-core — decode .ithmb files in the browser"

[lints]
workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
ithmb-core = { path = "../ithmb-core" }
wasm-bindgen = "0.2"
